@@ -13,4 +13,5 @@ define("_MODULE_ADMINISTRATOR_TOOLS_ROWSINSET", "Rows in set");
 define("_MODULE_ADMINISTRATOR_TOOLS_QUERYOK", "Query OK");
 define("_MODULE_ADMINISTRATOR_TOOLS_ROWSAFFECTED", "rows affected");
 define("_MODULE_ADMINISTRATOR_TOOLS_EMPTYSET", "Empty set");
+define("_MODULE_ADMINISTRATOR_TOOLS_BULKCOMPLETECOURSES", "Bulk complete lessons and courses");
 ?>
